testfx/errors/error_tests/err_19_return_missing_value.fx
// 测试19: R>返回语句错误
add := (a, b) {
    R> 
}
